[gd_scene load_steps=2 format=3 uid="uid://br7h2srkehddb"]

[ext_resource type="Script" path="res://shop/ComboCardShop/PackShop/pack_shop.gd" id="1_w4r05"]

[node name="PackShop" type="Node2D"]
script = ExtResource("1_w4r05")

[node name="Background" type="Panel" parent="."]
z_index = -10
offset_left = 80.0
offset_top = 96.0
offset_right = 1103.0
offset_bottom = 596.0

[node name="Button" type="Button" parent="Background"]
layout_mode = 0
offset_left = 927.0
offset_top = 416.0
offset_right = 1016.0
offset_bottom = 476.0
text = "ÐžÐ±Ð½Ð¾Ð²Ð¸Ñ‚ÑŒ
Ð·Ð° 1ðŸ’²"

[node name="Button2" type="Button" parent="Background"]
layout_mode = 0
offset_left = 823.0
offset_top = 421.0
offset_right = 920.0
offset_bottom = 470.0

[node name="Price" type="Label" parent="Background/Button2"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 33.0
metadata/_edit_lock_ = true

[node name="Money" type="Label" parent="Background"]
layout_mode = 0
offset_left = -58.0
offset_top = -82.0
offset_right = 38.0
offset_bottom = -50.0

[node name="Invetory btn" type="Button" parent="."]
offset_left = 1120.0
offset_top = 104.0
offset_right = 1276.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 30
text = "Ð˜Ð½Ð²ÐµÑ‚Ð°Ñ€ÑŒ"

[node name="Exit btn" type="Button" parent="."]
offset_left = 1120.0
offset_top = 8.0
offset_right = 1270.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 30
text = "Ð’Ñ‹Ñ…Ð¾Ð´"

[connection signal="pressed" from="Background/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Background/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Invetory btn" to="." method="_on_inventory_button"]
[connection signal="pressed" from="Exit btn" to="." method="_on_exit_button"]
